--- a/src/App.scss
+++ b/src/App.scss
@@ -3,11 +3,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #4776e6; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #8e54e9,
+    #4776e6
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #8e54e9,
+    #4776e6
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .calculator {
-  border: 1px solid #000;
-  padding: 10px;
   display: flex;
   flex-direction: column;
 
@@ -15,31 +24,73 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    grid-gap: 10px;
+    grid-gap: 3px;
   }
 }
 
 .output {
-  margin-bottom: 10px;
-  input {
-    width: 100%;
-    height: 50px;
-    text-align: right;
-    padding: 0;
-    padding-right: 10px;
-    box-sizing: border-box;
+  text-align: right;
+  min-height: 100px;
+  background-color: rgba(0, 0, 0, 0.8);
+  margin-bottom: 2px;
+  padding-right: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+
+  &-prev,
+  &-curr {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    line-height: 1;
+  }
+
+  &-prev {
+    min-height: 30px;
+    color: rgb(183, 178, 178);
+    font-size: 20px;
+  }
+  &-curr {
+    min-height: 50px;
+    color: #fff;
+    font-size: 25px;
   }
 }
 
 .button {
   padding: 0;
-  min-width: 50px;
-  min-height: 50px;
+  min-width: 80px;
+  min-height: 80px;
   display: inline-block;
   cursor: pointer;
+  border-style: none;
+  background-color: #08fff9;
+  transition: 0.2s ease-in;
+  -webkit-font-smoothing: antialiased;
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  outline: none;
+
+  &:hover {
+    transform: perspective(1px) scale(1.03);
+    // border-style: none;
+  }
 
   &.button-0-0,
   &.button-4-3 {
     grid-column: span 2;
+  }
+
+  &.button-0-0 {
+    background-color: #f71033a6;
+    font-size: 40px;
+    color: #fff;
+  }
+  &.button-4-3 {
+    background-color: #43e4a2;
+    font-size: 40px;
+    color: #fff;
   }
 }
