--- a/src/App.scss
+++ b/src/App.scss
@@ -3,16 +3,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #4776e6; /* fallback for old browsers */
+
+  background: #1a2980; /* fallback for old browsers */
   background: -webkit-linear-gradient(
-    to right,
-    #8e54e9,
-    #4776e6
+    to top,
+    #26d0ce,
+    #1a2980
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
-    to right,
-    #8e54e9,
-    #4776e6
+    to top,
+    #26d0ce,
+    #1a2980
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
@@ -81,16 +82,6 @@
   &.button-0-0,
   &.button-4-3 {
     grid-column: span 2;
-  }
-
-  &.button-0-0 {
-    background-color: #f71033a6;
-    font-size: 40px;
-    color: #fff;
-  }
-  &.button-4-3 {
-    background-color: #43e4a2;
-    font-size: 40px;
-    color: #fff;
+    font-size: 30px;
   }
 }
